2017.9/_sources/plugins/available/phylogeny/fasttree.txt
fasttree: Construct a phylogenetic tree with FastTree.
======================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime phylogeny fasttree [OPTIONS]

     Construct a phylogenetic tree with FastTree.

   Options:
     --i-alignment PATH           Artifact: FeatureData[AlignedSequence]
                                  [required]
                                  Aligned sequences to be used for
                                  phylogenetic reconstruction.
     --p-n-threads INTEGER RANGE  [default: 1]
                                  The number of threads. Using more
                                  than one thread runs the non-deterministic
                                  variant of `FastTree` (`FastTreeMP`), and may
                                  result in a different tree than single-
                                  threading. See
                                  http://www.microbesonline.org/fasttree/#OpenMP
                                  for details. (Use -1 to automatically use all
                                  available cores)
     --o-tree PATH                Artifact: Phylogeny[Unrooted] [required if not
                                  passing --output-dir]
                                  The resulting
                                  phylogenetic tree.
     --output-dir DIRECTORY       Output unspecified results to a directory
     --cmd-config PATH            Use config file for command options
     --verbose                    Display verbose output to stdout and/or stderr
                                  during execution of this action.  [default:
                                  False]
     --quiet                      Silence output if execution is successful
                                  (silence is golden).  [default: False]
     --help                       Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Construct a phylogenetic tree with FastTree.

   Construct a phylogenetic tree with FastTree.

   Parameters
   ----------
   alignment : FeatureData[AlignedSequence]
       Aligned sequences to be used for phylogenetic reconstruction.
   n_threads : Int % Range(-1), optional
       The number of threads. Using more than one thread runs the non-
       deterministic variant of `FastTree` (`FastTreeMP`), and may result in a
       different tree than single-threading. See
       http://www.microbesonline.org/fasttree/#OpenMP for details. (Use -1 to
       automatically use all available cores)

   Returns
   -------
   tree : Phylogeny[Unrooted]
       The resulting phylogenetic tree.</pre>
       </div>
     </div>
   </div>